# python-ci-templates

./: Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build-image.yml  ci-app.yml  ci-classic.yml  ci-ruff.yml  compare-classic.yml  compare-ruff.yml
src/sample_pkg/: __init__.py  app.py
