# === build / package metadata ===
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-pkg"                # 適宜変更OK
version = "0.1.0"
description = "Sample package for CI artifacts"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

# === format / lint / type-check ===
[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E=pycodestyle, F=pyflakes, I=import（=isort相当）
select = ["E", "F", "I"]
ignore = ["E203"]   # Black互換のため W503 はRuff非対象なので書かない

[tool.ruff.format]
# 既定がBlack互換
